<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">World</string>
    <string name="picasso_app_name">RoundedPicassoView</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="background">背景</string>
    
    <string name="message">消息</string>
    <string name="contact">联系人</string>
    <string name="affairs">动态</string>
    <string name="more">更多</string>
    <string name="card">名片</string>
    <string name="register">新用户</string>
    <string name="cannotLogin">无法登录</string>
    <string name="login">登录</string>
    
    <string name="wallet">钱包</string>
    <string name="album">相册</string>
    <string name="accountMgr">帐号管理</string>
    
    <string name="sof">社交圈</string>
    <string name="contacts">通讯录</string>
    <string name="group">群组</string>
    
    <string name="fg">好友分组</string>
    
    <string name="account">帐号</string>
    <string name="logout">退出当前帐号</string>
    
    <string name="btLogin">登录</string>
    <string name="username_hint_text">帐号/手机号码/邮箱</string>
    <string name="password_hint_text">密码</string>

    
    <string name="btRegister">注册</string>
    <string name="register_mobile_hint_text">请输入你的手机号码</string>
    <string name="terms">我已阅读并同意使用条款和隐私政策</string>
    
    <string name="yihaodian">1号店</string>
    <string name="tgou">天天购</string>
    <string name="pull_refresh">下拉刷新</string>
    <string name="bluetooth">蓝牙</string>
    <string name="joystick">游戏手柄</string>
    <string name="remoteControl">遥控器</string>
    <string name="touchControl">触控屏</string>
    <string name="scan">扫一扫</string>
    <string name="scanCard">扫描银行卡</string>
    <string name="example1">例子1</string>
    <string name="example2">例子2</string>
    <string name="setting">设置</string>
    <string name="update">版本更新</string>
    <string name="about">关于...</string>
    
    <string name="enableBluetooth">开启</string>
    <string name="disableBluetooth">关闭</string>
    <string name="searchBluetooth">搜索</string>
    <string name="icon">图标</string>
    <string name="bond">配对</string>
    <string name="connect">连接</string>
    
    <string-array name="action_list">
	    <item>Bitmap</item>
	    <item>Ovals</item>
	    <item>Color</item>
	    <!-- 
	    <item>Picasso</item>
	     -->
	</string-array>
	
    
	<string name="pull_to_refresh">下拉可以刷新</string>
	<string name="release_to_refresh">释放立即刷新</string>
	<string name="refreshing">正在刷新…</string>
	<string name="not_updated_yet">暂未更新过</string>
	<string name="updated_at">上次更新于%1$s前</string>
	<string name="updated_just_now">刚刚更新</string>
	<string name="time_error">时间有问题</string>
</resources>
