<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.world.MainActivity$PlaceholderFragment" >
    <LinearLayout 
        android:id="@+id/panel"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
        android:orientation="vertical">
        
	    <LinearLayout 
	        android:id="@+id/titlePanel"
	        android:layout_width="fill_parent"
	        android:layout_height="50dp" 
	        android:orientation="horizontal">
	        
	    </LinearLayout>
	    <LinearLayout 
	        android:id="@+id/content"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent" 
	        android:orientation="vertical"
	        android:layout_below="@+id/titlePanel">

	        <TextView
	            android:id="@+id/bluetooth"
	            android:layout_width="fill_parent"
	            android:layout_height="32dp"
	            android:gravity="center_vertical"
	            android:text="@string/bluetooth" />

	        <TextView
	            android:id="@+id/joystick"
	            android:layout_width="fill_parent"
	            android:layout_height="32dp"
	            android:gravity="center_vertical"
	            android:text="@string/joystick" />

	        <TextView
	            android:id="@+id/remoteControl"
	            android:layout_width="fill_parent"
	            android:layout_height="32dp"
	            android:gravity="center_vertical"
	            android:text="@string/remoteControl" />

	        <TextView
	            android:id="@+id/touchControl"
	            android:layout_width="fill_parent"
	            android:layout_height="32dp"
	            android:gravity="center_vertical"
	            android:text="@string/touchControl" />

	        <TextView
	            android:id="@+id/scan"
	            android:layout_width="fill_parent"
	            android:layout_height="32dp"
	            android:gravity="center_vertical"
	            android:text="@string/scan" />
	        
	        <TextView
	            android:id="@+id/scanCard"
	            android:layout_width="fill_parent"
	            android:layout_height="32dp"
	            android:gravity="center_vertical"
	            android:text="@string/scanCard" />
	        
	        
	        
	        <TextView
	            android:id="@+id/setting"
	            android:layout_width="fill_parent"
	            android:layout_height="32dp"
	            android:gravity="center_vertical"
	            android:text="@string/setting" />
	        
	        <TextView
	            android:id="@+id/update"
	            android:layout_width="fill_parent"
	            android:layout_height="32dp"
	            android:gravity="center_vertical"
	            android:text="@string/update" />
	        
	        <TextView
	            android:id="@+id/about"
	            android:layout_width="fill_parent"
	            android:layout_height="32dp"
	            android:gravity="center_vertical"
	            android:text="@string/about" />
	    </LinearLayout>
    </LinearLayout>
</RelativeLayout>