<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:layout_marginTop="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp" 
        android:paddingTop="0dp" 
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:paddingLeft="0dp"
    tools:context="com.example.world.MainActivity"
    tools:ignore="MergeRootFrame">
    <LinearLayout
	    android:id="@+id/content"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent" 
	    android:layout_marginTop="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp" 
        android:paddingTop="0dp" 
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:paddingLeft="0dp"
	    android:orientation="vertical" >
	    <LinearLayout
		    android:id="@+id/title"
		    android:layout_width="fill_parent"
		    android:layout_height="50dp" 
		    android:layout_marginTop="0dp"
	        android:layout_marginRight="0dp"
	        android:layout_marginBottom="0dp"
	        android:layout_marginLeft="0dp" 
	        android:paddingTop="0dp" 
	        android:paddingRight="0dp"
	        android:paddingBottom="0dp"
	        android:paddingLeft="0dp"
		    android:orientation="horizontal" >
	
	        <TextView
		        android:id="@+id/mContact" 
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent" 
		        android:layout_weight="1" 
		        android:gravity="center"
		        android:text="@string/contact" />
	        <TextView
		        android:id="@+id/mAffairs" 
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:layout_weight="1"
		        android:gravity="center"
		        android:text="@string/affairs" />
	        <TextView
		        android:id="@+id/mMessage" 
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:layout_weight="1"
		        android:gravity="center"
		        android:text="@string/message" />
	        
	        <TextView
		        android:id="@+id/mMore" 
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:layout_weight="1"
		        android:gravity="center"
		        android:text="@string/more" />
	        
	        <TextView
		        android:id="@+id/mRegister" 
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:layout_weight="1"
		        android:gravity="center"
		        android:text="@string/register" />
	        
	        <TextView
		        android:id="@+id/mLogin" 
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:layout_weight="1"
		        android:gravity="center"
		        android:text="@string/login" />
	    </LinearLayout>
	    <android.support.v4.view.ViewPager    
	        android:id="@+id/viewPager" 
	        android:layout_width="fill_parent" 
	        android:layout_height="wrap_content" 
	        android:layout_marginTop="0dp" 
	        android:layout_marginRight="0dp" 
	        android:layout_marginBottom="0dp" 
	        android:layout_marginLeft="0dp" 
	        android:paddingTop="0dp" 
	        android:paddingRight="0dp" 
	        android:paddingBottom="0dp" 
	        android:paddingLeft="0dp"/>
	</LinearLayout>
    
    
    
    <!-- 
     -->
</FrameLayout>

