<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" 
    
    tools:context="com.example.world.MainActivity$PlaceholderFragment" >

    <!-- 
    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:text="@string/hello_world" />
	 -->
	 
	<LinearLayout
	    android:id="@+id/title"
	    android:layout_width="fill_parent"
	    android:layout_height="50dp"
	    android:orientation="horizontal" >

        <TextView
	        android:id="@+id/mContact" 
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent" 
	        android:layout_weight="1" 
	        android:gravity="center"
	        android:text="@string/contact" />
        <TextView
	        android:id="@+id/mAffairs" 
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:text="@string/affairs" />
        <TextView
	        android:id="@+id/mMessage" 
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:text="@string/message" />
    </LinearLayout>
    <LinearLayout 
        android:id="@+id/content"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title" >
        <ListView android:layout_width="wrap_content"   
            android:layout_height="wrap_content"   
            android:id="@+id/contact"/>
    </LinearLayout>
</RelativeLayout>