<!-- 
	android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" 
 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="0dp"
    android:layout_marginRight="0dp"
    android:layout_marginBottom="0dp"
    android:layout_marginLeft="0dp" 
    tools:context="com.example.world.MainActivity$PlaceholderFragment" >
    <!-- 
        android:layout_marginTop="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
     -->
    <LinearLayout 
        android:id="@+id/panel"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
        android:layout_marginTop="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp" 
        android:paddingTop="0dp" 
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:paddingLeft="0dp"
        android:orientation="vertical">
	    <LinearLayout 
	        android:id="@+id/titlePanel"
	        android:layout_width="fill_parent"
	        android:layout_height="50dp" 
	        android:orientation="horizontal">
	        <TextView
		        android:id="@+id/enableBluetooth" 
		        android:layout_width="fill_parent"
		        android:layout_height="50dp" 
		        android:gravity="center"
		        android:layout_weight="1"
		        android:text="@string/enableBluetooth"/>
	        <TextView
		        android:id="@+id/disableBluetooth" 
		        android:layout_width="fill_parent"
		        android:layout_height="50dp"
		        android:gravity="center"
		        android:layout_weight="1"
		        android:text="@string/disableBluetooth"/>
	        <TextView
		        android:id="@+id/searchBluetooth" 
		        android:layout_width="fill_parent"
		        android:layout_height="50dp"
		        android:gravity="center"
		        android:layout_weight="1"
		        android:text="@string/searchBluetooth"/>
	    </LinearLayout>
	    <LinearLayout 
	        android:id="@+id/content"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent" 
	        android:orientation="vertical"
	        android:layout_below="@+id/titlePanel">

	        <ListView android:layout_width="wrap_content"   
	            android:layout_height="wrap_content"   
	            android:id="@+id/bluetooth"/>

	    </LinearLayout>
    </LinearLayout>
</RelativeLayout>