<!-- 
android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" 
 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="com.example.world.MainActivity$PlaceholderFragment" >
    <LinearLayout 
        android:id="@+id/panel"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"  
        android:layout_marginTop="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:orientation="vertical">
        
        <!-- 
        android:background="@color/azure" 
         -->
	    <LinearLayout 
	        android:id="@+id/titlePanel"
	        android:layout_width="fill_parent"
	        android:layout_height="150dp" 
	        android:background="@color/white" 
	        android:orientation="horizontal" 
	        android:gravity="center">
	        <ImageView 
			    android:paddingTop="12dip" 
			    android:layout_width="wrap_content"   
			    android:layout_height="wrap_content" 
			    android:layout_gravity="center"
			    android:background="@drawable/logo"
			    android:id="@+id/ItemImage"/> 
	    </LinearLayout>
	    <LinearLayout 
	        android:id="@+id/content"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent" 
	        android:orientation="vertical">

	        <EditText android:id="@+id/username" 
	            android:inputType="textAutoComplete"
	            android:layout_width="fill_parent" 
	        	android:layout_height="42dp" 
	        	android:paddingBottom="0dp"
			    android:paddingLeft="0dp"
			    android:paddingRight="0dp"
			    android:paddingTop="0dp" 
			    android:layout_marginTop="0dp"
		        android:layout_marginRight="0dp"
		        android:layout_marginBottom="0dp"
		        android:layout_marginLeft="0dp" 
		        android:hint="@string/username_hint_text" 
		        android:background="@drawable/style_edittext_normal"/>
			<EditText android:id="@+id/password" 
	            android:inputType="textPassword"
	            android:layout_width="fill_parent"
	        	android:layout_height="42dp" 
	        	android:paddingBottom="0dp"
			    android:paddingLeft="0dp"
			    android:paddingRight="0dp"
			    android:paddingTop="0dp" 
			    android:layout_marginTop="0dp"
		        android:layout_marginRight="0dp"
		        android:layout_marginBottom="0dp"
		        android:layout_marginLeft="0dp" 
		        android:hint="@string/password_hint_text"
		        android:background="@color/white"/>
			<Button android:id="@+id/btLogin"
			    android:layout_width="fill_parent"
			    android:layout_height="42dp" 
			    android:layout_marginTop="18dp"
		        android:layout_marginRight="20dp"
		        android:layout_marginBottom="18dp"
		        android:layout_marginLeft="20dp" 
			    android:text="@string/btLogin" 
			    android:background="@drawable/style_button_normal"/>
	    </LinearLayout>
    </LinearLayout>
</RelativeLayout>